# study_companion

./: kafka_pdf_workflow_readme.md
Agents/BLOG/: blog_workflows.db  pyproject.toml  requirements.txt
Agents/BLOG/app/: config.py  db.py  dependencies.py
Agents/BLOG/app/consumers/: blog_approval.py  blog_mediachooser.py  blog_operation.py
Agents/BLOG/app/models/: request.py  response.py  state.py  workflow_db.py
Agents/BLOG/app/services/: HITL_service.py  blog_service.py  publish_service.py  workflow.py  workflow_store.py  youtube_service.py
Agents/BLOG/app/workflows/: blog_workflow.py
Agents/PDF/: .gitignore  pyproject.toml  requirements.txt
Agents/PDF/app/: config.py  consumer.py  db.py  dependencies.py
Agents/PDF/app/models/: request.py  response.py  state.py  workflow_db.py
Agents/PDF/app/services/: answer_question.py  classification_chain.py  embed_pdf.py  extract_text.py  pdf_load.py  quiz_pdf.py  quiz_topic.py  similar_pages.py  split_pdf.py  summarize_pdf.py  summarize_topic.py  workflow.py  workflow_store.py
Agents/PDF/app/workflows/: pdf_workflow.py
StudyApp/: KafkaSteps.txt  docker-compose.yml  pom.xml
StudyApp/src/main/java/com/adi/agents/: AgentsApplication.java  Test.java
StudyApp/src/main/java/com/adi/agents/blog/controller/: BlogController.java
StudyApp/src/main/java/com/adi/agents/blog/dao/: BlogDAO.java
StudyApp/src/main/java/com/adi/agents/blog/entity/: BlogEntity.java
StudyApp/src/main/resources/: application.properties
StudyApp/src/test/java/com/adi/agents/: AgentsApplicationTests.java
(+16 files in other folders)
